@@ -1,3 +1,9 @@
+2008-01-23 Harri Pitkänen <hatapitk@iki.fi>
+
+	* Add Makefile targets 'extension-files', 'oxt' and
+	  'install-unpacked'. 'extension-files' is the new default,
+	  'all' refers to 'oxt'.
+
 2008-01-22 Harri Pitkänen <hatapitk@iki.fi>
 
 	* Use locale encoding with file names.
